RESOLVED FIXED159851
Web Automation: Fix element and event coord space issues
https://bugs.webkit.org/show_bug.cgi?id=159851
Summary Web Automation: Fix element and event coord space issues
Timothy Hatcher
Reported 2016-07-15 17:01:54 PDT
Attachments
Patch (3.78 KB, patch)
2016-07-15 17:04 PDT, Timothy Hatcher
bburg: review+
timothy: commit-queue-
Radar WebKit Bug Importer
Comment 1 2016-07-15 17:03:01 PDT
Timothy Hatcher
Comment 2 2016-07-15 17:04:21 PDT
Blaze Burg
Comment 3 2016-07-15 17:14:30 PDT
Comment on attachment 283818 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=283818&action=review r=me > Source/WebKit2/WebProcess/Automation/WebAutomationSessionProxy.cpp:503 > rect = coreFrameView->rootViewToContents(rect); I see, so in this case the topContentInset is eventually subtracted here: ScrollPosition ScrollView::documentScrollPositionRelativeToViewOrigin() const { return scrollPosition() - IntSize( shouldPlaceBlockDirectionScrollbarOnLeft() && m_verticalScrollbar ? m_verticalScrollbar->occupiedWidth() : 0, headerHeight() + topContentInset(TopContentInsetType::WebCoreOrPlatformContentInset)); } But otherwise we get the clientRect in raw window space, which is why we have to deduct topContentInset in the other case. You may want to add a comment or note in the changelog about this, as I thought it was a bug when reviewing.
Timothy Hatcher
Comment 4 2016-07-15 18:21:05 PDT
Note You need to log in before you can comment on or make changes to this bug.