Web Automation: Fix element and event coord space issues https://bugs.webkit.org/show_bug.cgi?id=159851 rdar://problem/27375780

Reviewed by Brian Burg.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::performMouseInteraction): Subtract topContentInset() before
it goes back out to WebDriver.
* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::computeElementLayout): When using useViewportCoordinates,
subtract topContentInset() so it matches expectations.

Canonical link: https://commits.webkit.org/178006@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203316 268f45cc-cd09-0410-ab3c-d52691b4dbfc